--- a/templates/components/navbar.html.jinja
+++ b/templates/components/navbar.html.jinja
@@ -3,7 +3,7 @@
     <div class="flex items-center gap-4 px-6 py-3 rounded-3xl border border-gray-400/40 
                 bg-gradient-to-b from-gray-900 to-gray-800 shadow-xl">
         <a href="/" class="text-white mx-2 hover:underline px-6 py-3 bg-gradient-to-b from-gray-700 to-gray-900 shadow-md px-6 py-3 rounded-xl text-white font-semibold">Home</a>
-        <a href="/shop" class="text-white mx-2 hover:underline bg-gradient-to-b from-gray-700 to-gray-900 shadow-md px-6 py-3 rounded-xl text-white font-semibold">Shop</a>
+        <a href="/browse" class="text-white mx-2 hover:underline bg-gradient-to-b from-gray-700 to-gray-900 shadow-md px-6 py-3 rounded-xl text-white font-semibold">Shop</a>
         <a href="/about" class="text-white mx-2 hover:underline bg-gradient-to-b from-gray-700 to-gray-900 shadow-md px-6 py-3 rounded-xl text-white font-semibold">About</a>
         <a href="/contact" class="text-white mx-2 hover:underline bg-gradient-to-b from-gray-700 to-gray-900 shadow-md px-6 py-3 rounded-xl text-white font-semibold">Contact</a>
         
@@ -16,13 +16,13 @@
 
 <div class="flex flex-wrap place-items-center h-screen">
   <section class="relative mx-auto">
-      <!-- navbar -->
+     
     
           Logo Here.
         </a>
         
         
-        <!-- Header Icons -->
+    <nav class="flex justify-between bg-gray-900/50 backdrop-blur-md px-5 py-3 rounded-3xl border border-gray-400/40 shadow-xl">
         <div class="hidden xl:flex items-center space-x-5 items-center">
           <a class="hover:text-gray-200" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -39,7 +39,7 @@
                 </span>
               </span>
           </a>
-          <!-- Sign In / Register      -->
+          
           <a class="flex items-center hover:text-gray-200" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -48,7 +48,7 @@
           
         </div>
       </div>
-      <!-- Responsive navbar -->
+      
       
     </nav>
     
