--- a/templates/homepage.html.jinja
+++ b/templates/homepage.html.jinja
@@ -8,15 +8,19 @@
     <title>EZ-BAM</title>
   </head>
 
-  <body class="bg-[#0c0c0c] text-gray-200 min-h-screen font-sans">
-
-   
+  <body class="bg-gradient-to-b from-gray-700 to-gray-500 shadow-md px-6 py-3 text-gray-400 min-h-screen font-sans">
+    
     {% include 'components/navbar.html.jinja' %}
 
-   
     
-    
-      </div>
+    <section class="flex flex-col items-center mt-12">
+    <h1 class="text-5xl font-bold text-white mb-6 rounded-lg hover:scale-105 hover:bg-gray-700 transition-all duration-200">Welcome to EZ-BAM</h1>
+      <img 
+        src="/static/inf.gif" 
+        alt="EZ-BAM"
+        class="w-80 h-auto rounded-xl shadow-xl"
+      >
     </section>
+
   </body>
 </html>
