--- a/templates/browse.html.jinja
+++ b/templates/browse.html.jinja
@@ -23,11 +23,11 @@
     <main class = "grid grid-cols-4 gap-3 max-w-7xl mx-auto py-6 mb-5">
       {%for x in products %}
         
-        <div class="grid place-items-center bg-gray-800 p-4 rounded-lg hover:scale-105 hover:bg-gray-700 transition-all duration-200">
+        <a href="/product/{{x ['ID'] }}" class="grid place-items-center bg-gray-800 p-4 rounded-lg hover:scale-105 hover:bg-gray-700 transition-all duration-200">
           <img class="h-25 mx-auto" src = "{{ x['Image'] }}" >
           <div>{{x["Name"]}}</div>
           <div class="text-right font-bold text-sm">$ {{x["Price"]}}</div>
-          </div>
+          </a>
       {%endfor%}
     </main>
   </body>
