--- a/templates/homepage.html.jinja
+++ b/templates/homepage.html.jinja
@@ -17,6 +17,7 @@
     <h1 class="text-5xl font-bold text-white mb-6 rounded-lg hover:scale-105 hover:bg-gray-700 transition-all duration-200">Welcome to EZ-BAM</h1>
       <img 
         src="/static/inf.gif" 
+        class="w-150 h-auto rounded-xl shadow-xl"
         alt="EZ-BAM"
         class="w-80 h-auto rounded-xl shadow-xl"
       >
