--- a/templates/signup.html.jinja
+++ b/templates/signup.html.jinja
@@ -11,6 +11,11 @@
     {% include 'components/navbar.html.jinja' %}
 </body>
 
+{%for message in get_flashed_messages() %}
+    <li>{{ message }}</li>
+
+{%endfor%}
+
 <div class="max-w-md mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
     <h2 class="text-2xl font-bold mb-4">Sign Up</h2>
     <form action="/signup" method="POST">
@@ -25,6 +30,14 @@
         <div class="mb-4">
             <label for="password" class="block text-sm font-medium">Password</label>
             <input type="password" id="password" name="password" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md" />
+        </div>
+         <div class="mb-4">
+            <label for="password" class="block text-sm font-medium">Confirm Password</label>
+            <input type="password" id="password" name="confirm_password" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md" />
+        </div>
+        <div class="mb-4">
+            <label for="address" class="block text-sm font-medium">Address</label>
+            <input type="text" id="address" name="address" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md" />
         </div>
         <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 rounded">Sign Up</button>
     </form>
