--- a/templates/components/navbar.html.jinja
+++ b/templates/components/navbar.html.jinja
@@ -9,6 +9,7 @@
         
         <a href="/" class="px-6 py-3 rounded-xl text-white font-semibold 
         
+        {{current_user.email}}
 
         </a>
 
