--- a/templates/components/navbar.html.jinja
+++ b/templates/components/navbar.html.jinja
@@ -9,7 +9,7 @@
         
         <a href="/" class="px-6 py-3 rounded-xl text-white font-semibold 
         
-        {{current_user.email}}
+        
 
         </a>
 
@@ -24,6 +24,7 @@
         
         
     <nav class="flex justify-between bg-gray-900/50 backdrop-blur-md px-5 py-3 rounded-3xl border border-gray-400/40 shadow-xl">
+    {{current_user.username }}
         <div class="hidden xl:flex items-center space-x-5 items-center">
           <a class="hover:text-gray-200" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -42,14 +43,23 @@
           </a>
           
           <div class="relative group">
+          
             <a class="flex items-center hover:text-gray-200" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
               </a>
             <div class="absolute right-0 mt-2 w-48 bg-gray-800 rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
+            {% if not current_user.is_authenticated  %}
               <a href="/login" class="block px-4 py-2 hover:bg-gray-700 text-white rounded-t-lg">Login</a>
+            
               <a href="/signup" class="block px-4 py-2 hover:bg-gray-700 text-white rounded-b-lg">Sign Up</a>
+              {%else%}
+                <div>
+                    Hi,{{ current_user.name }}
+                </div>
+                <a href="/logout" class="block px-4 py-2 hover:bg-gray-700 text-white rounded-b-lg">Logout</a>
+            {%endif%}
             </div>
           </div>   
         </div>
