--- a/templates/product.html.jinja
+++ b/templates/product.html.jinja
@@ -49,10 +49,14 @@
             
             
 
-            
+        <form method="post" action="/product/{{ product['ID']}}/add_to_cart">
+            <label>Qty:</label>
+            <input type="number"  name="qty:" value="1" min="1" max="10">
             <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg w-full text-lg">
                 Add to Cart
             </button>
+
+        </form>
 
         </div>
     </div>
