--- a/templates/cart.html.jinja
+++ b/templates/cart.html.jinja
@@ -16,7 +16,7 @@
 
 <h1 class="text-3xl font-bold mb-6">Your Cart</h1>
 
-<!-- Header Row -->
+
 <div class="grid grid-cols-6 font-bold text-gray-700 mb-3 px-2">
     <div>Item</div>
     <div>Name</div>
@@ -42,14 +42,23 @@
         </div>
 
         
-        <div class="flex items-center justify-center space-x-2">
-            <label>Qty:</label>
-            <input type="number"  name="qty:" value="1" min="1" max="10">
-            <div class="w-10 text-center font-medium">
-            </div>
+        <div class="cart-row">
+                <img src="{{x['Image']}}"
+                class ="w-20 h-20 object-cover rounded-md border">
+                <div class="text-lg font semibold ml-4">{{x['Name']}}</div>
 
-            
+
+   
+                <div class="flex items-center justify-center space-x-2">
+                    <form method="post" action="/cart/{{ x['ProductID'] }}/update_qty">
+                    <input class="w-full" name="qty" type="number"  value="{{ x['Quantity']}}">
+                    <button type="submit">update</button>
+                    </form>
+                </div>
+
+
         </div>
+
 
         
         <div class="text-center font-medium text-gray-800">
@@ -74,7 +83,7 @@
     {% endfor %}
 </div>
 
-<!-- Cart Summary -->
+
 <div class="mt-10 bg-white shadow-lg rounded-lg p-6 w-full md:w-1/3 ml-auto">
     <h2 class="text-2xl font-bold mb-4">Order Summary</h2>
 
